syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.chepenkov.generated";
option java_outer_classname = "StorageProto";

package storage;

service StorageService {
  rpc UploadFile (stream FileChunk) returns (FileUploadResponse);
  rpc DownloadFile (FileDownloadRequest) returns (stream FileChunk);
}

message FileChunk {
  string userId = 1;
  string filename = 2;
  bytes chunkData = 3;
  int32 chunkIndex = 4;
  bool isLast = 5;
}

message FileUploadResponse {
  string fileUrl = 1;
  bool isSuccess = 2;
}

message FileDownloadRequest {
  string userId = 1;
  string filename = 2;
}
